Fixed reports for robustness and sequence for my use-cases

--- a/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
+++ b/Reports/Robustness-Diagrams/v1.0/Files/Robustness-diagrams-v1.0.tex
@@ -39,12 +39,30 @@
 %Insert Body Here
 \section{Robustness Diagrams}
 
+\textbf{Σημειώσεις και Παραδοχές Έκδοσης v1.0:}
+\begin{itemize}
+    \item Σε όλα τα παρακάτω robustness diagrams έχουμε χρησιμοποιήσει μπλε χρώμα για να δείξουμε τις εναλλακτικές ροές και κόκκινο για να δείξουμε τα βελάκια προς αντικείμενα οντοτήτων, ώστε να ξεχωρίζουν καλύτερα σε σχέση με τα άλλα βέλη.
+
+    \item Επίσης επειδή σε πολλές περιπτώσεις θέλουμε να δηλώσουμε την επιστροφή σε προηγούμενη οθόνη, χωρίς όμως να υπάρχει αβεβαιότητα ως προς την ακολουθία ενεργειών και να ακολουθήσουμε πιστά τις ενέργειες όπως τις ορίσαμε στα use cases, αναγκαστήκαμε να αναφέρουμε τα τμήματα της οθόνης που χρησιμοποιούμε κάθε φορά στα συνοριακά αντικείμενα, με αποτέλεσμα πολλές φορές πολλά συνοριακά να αναφέρονται στην ίδια οθόνη. Αυτό το αναγράφουμε με την σύνταξη "<Όνομα Οθόνης>: <Τμήμα>" στα ονόματα των συνοριακών.
+
+Παρόλα αυτά όμως, για λόγους απλότητας της αρχιτεκτονικής της εργασίας, προχωρώντας στα sequence diagrams και έπειτα στον κώδικα της άσκησης, για όλα αυτά τα συνοριακά αντικείμενα που αποσκοπούν στην ίδια οθόνη θα μεταφερθεί μόνο ένα συνοριακό στα sequence, οπότε θα προκύψει μια κλάση για όλα τα συνοριακά αυτά και στο κώδικα, αντί για τη συνηθισμένη τεχνική της μεταφοράς όλων των συνοριακών και τη δημιουργία μιας κλάσης για κάθε συνοριακό. Σε κάθε περίπτωση που κάνουμε αυτή τη παραδοχή θα το αναφέρουμε ρητά κάτω από το robustness diagram όπου το εφαρμόζουμε και θα εξηγούμε γιατί πήραμε αυτή τη απόφαση και πως μας βοήθησε έναντι της συνηθισμένης τεχνικής μεταφοράς όλων.
+
+    \item Επίσης αναφέρουμε ότι σε ορισμένα robustness diagrams, έχουμε πάλι πολλαπλά αντικείμενα οντοτήτων πολλές φορές που θέλουμε να αποσκοπούν σε ένα lifeline του sequence διαγράμματος και σε μια κλάση του κώδικα. Αυτό συμβαίνει κυρίων όταν το use cases θέλουμε στο τελικό κώδικα να χρησιμοποιεί πολλαπλά στιγμιότυπα της ίδιας κλάσης (πχ "Προφίλ ενοικιαστή" και "Προφίλ ιδιοκτήτη" που αποσκοπούν στην ίδια κλάση "User", εφόσον όλοι οι χρήστες μπορούν να είναι και ενοικιαστές και ιδιοκτήτες σε διαφορετικές συναλλαγές). Εδώ πάλι ο λόγος που χρησιμοποιούμε πολλαπλά αντικείμενα οντοτήτων είναι για να είναι ξεκάθαρο το στιγμιότυπο που χρησιμοποιείται κάθε φορά, και για να δείξουμε ότι αναφερόμαστε στην ίδια κλάση (και ότι θα γίνει μεταφορά μόνο ενός entity object στο sequence diagram) χρησιμοποιούμε τη σύνταξη "<Όνομα Οντότητας>: <Πεδίο ή/και περιγραφή στιγμιότυπου>". Πάλι εδώ σε κάθε use case που θέλουμε και μας διευκολύνει να δημιουργήσουμε μόνο μια κλάση από πολλά entity objects θα το αναφέρουμε από κάτω από το robustness διάγραμμα μαζί με αιτιολόγηση για τη κάθε περίπτωση.
+\end{itemize}
+
 \subsection{Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{Search Robustness.png}
 	\caption{Robustness Diagram: Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 	\label{Robustness Diagram: Αναζήτηση βιβλίων / χρήστη / αιτήσεων}
 \end{figure}
+\label{Search}
+
+Σχετικά με το robustness diagram για την "Αναζήτηση βιβλίων / χρήστη / αιτήσεων", θέλαμε να αναφέρουμε πως τα συνοριακά αντικείμενα "Σελίδα Αναζήτησης", "Σελίδα Αναζήτησης: Βιβλία που Βρέθηκαν", "Σελίδα Αναζήτησης: Διαθέσιμοι Χρήστες από όπου Μπορεί να Ενοικιάσει ο Χρήστης", "Σελίδα Αναζήτησης: Προφίλ Χρήστη που Αναζητήθηκε μαζί με τις αξιολογήσεις του", "Σελίδα Αναζήτησης: Αιτήσεις που Βρέθηκαν", "Σελίδα Αναζήτησης: Διαθέσιμοι Χρήστες για τους οποίους μπορεί να Εκπληρώσει Αίτηση" και "Σελίδα Αναζήτησης: Κενή Αναζήτηση" όλες αναφέρονται στην ίδια οθόνη της "Σελίδας Αναζήτησης".
+
+Ο λόγος που χρησιμοποιούμε πολλά συνοριακά για την ίδια οθόνη είναι για να φαίνεται καθαρά η ακολουθία των ενεργειών στο διάγραμμα και να μην σπάσουμε το τεστ των ακμών, μέσω της επιστροφής σε προηγούμενο συνοριακό.
+
+Για λόγους απλότητας όμως, μεταφέροντας τα συνοριακά αντικείμενα ως κλάσεις στα sequence diagrams και στο class diagram σε επόμενο βήμα, και τέλος και στο κώδικα, θα μεταφέρουμε μόνο τη "Σελίδα Αναζήτησης". Γνωρίζουμε ότι θα μπορούσαμε να δημιουργήσουμε περισσότερες κλάσεις για τα αποτελέσματα για παράδειγμα, αλλά πιστεύουμε ότι θα οδηγούσε σε πολύ σύνθετη αρχιτεκτονική κώδικα, καθώς και οι επιπλέον κλάσεις που θα δημιουργούσαμε δεν θα μπορούσαν να επαναχρησιμοποιηθούν αλλού. Οπότε προτιμήσαμε να θεωρήσουμε τη "Σελίδα Αναζήτησης (SearchPage κλάση αργότερα) ως μια κλάση μαζί με όλο της το περιεχόμενο.
 
 \subsection{Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 \begin{figure}[H]
@@ -52,6 +70,13 @@
 	\caption{Robustness Diagram: Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 	\label{Robustness Diagram: Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση}
 \end{figure}
+\label{Rent}
+
+Στο robustness diagram για τη "Αποδοχή προσφοράς Βιβλίου και Ενοικίαση" έχουμε κάνει πάλι παρόμοια παραδοχή για ορισμένα συνοριακά αντικείμενα όπως κάναμε στο κεφάλαιο \ref{Search}, αυτή τη φορά όμως θεωρώντας τα συνοριακά αντικείμενα "Dashboard Πεδία αποδοχής ή απόρριψης συναλλαγής", "Dashboard: Πεδίο Δήλωσης Επιτυχούς Παράδοσης", "Dashboard: Πεδίο Δήλωσης Επιστροφής" να αναφέρονται σε διαφορετικά τμήματα της ίδιας οθόνης, του "Dashboard", που θα μεταφερθεί ως μια κλάση στο class diagram, sequence diagram και κώδικα.
+
+Επίσης αναφέρουμε ότι τα συνοριακά αντικείμενα "Navigation Bar: Μεριά Ενοικιαστή" και "Navigation Bar: Μεριά Ιδιοκτήτη" αναφέρονται σε δύο διαφορετικά στιγμιότυπα της ίδιας κλάσης, ένα για κάθε χειριστή της εφαρμογής. Οπότε και αυτό μεταφέρεται σαν μια κλάση στο class diagram και robustness diagram και κώδικα (την GUI).
+
+Τέλος τα αντικείμενα οντότητας "Προφίλ: Υπόλοιπο Ενοικιαστή" και "Προφίλ: Υπόλοιπο Ιδιοκτήτη" αναφέρονται πάλι σε δύο διαφορετικά στιγμιότυπα της μετέπειτα κλάσης που δημιουργήσαμε στο sequence diagram "User" (και μεταφέρθηκε στο class diagram και κώδικα), η οποία κλάση περιέχει πεδίο για υπόλοιπο χρήστη. Ο λόγος που και ο ενοικιαστής και ιδιοκτήτης είναι στιγμιότυπα της ίδιας κλάσης "User" είναι επειδή όλοι οι χρήστες μπορούν να είναι και ιδιοκτήτες και ενοικιαστές σε διαφορετικές συναλλαγές.
 
 \subsection{Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 \begin{figure}[H]
@@ -59,6 +84,8 @@
 	\caption{Robustness Diagram: Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 	\label{Robustness Diagram: Αποδοχή Αίτησης Βιβλίου και Ενοικίαση}
 \end{figure}
+
+Στο robustness diagram για τη "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση" ισχύουν οι ίδιες σημειώσεις και παραδοχές που ίσχυαν και για το robustness diagram στο κεφάλαιο \ref{Rent}, εφόσον τα δύο use cases "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση" και "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" αποτελούν δύο πτυχές της ίδιας διαδικασίας, που εξηγήσαμε στο τεχνικό κείμενο "Use-cases-v1.0" γιατί τα αναφέρουμε ξεχωριστά.
 
 \subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
 \begin{figure}[H]
