Updated Project-code v1.0 and Class-diagram v1.0

--- a/Reports/Class-Diagram/v1.0/Files/Class-Diagram-v1.0.tex
+++ b/Reports/Class-Diagram/v1.0/Files/Class-Diagram-v1.0.tex
@@ -45,7 +45,11 @@
 	\label{Σχήμα Class Diagram}
 \end{figure}
 
-\textbf{Σημείωση:} Γνωρίζουμε ότι το σχήμα είναι πολύ μεγάλο και τα γράμματα φαίνονται μικρά, παρόλα αυτά έχουμε σιγουρευτεί ότι είναι ευδιάκριτα όταν γίνει zoom του αρχείου. Ταυτόχρονα παρέχεται και η εικόνα ξεχωριστά καθώς και το .vpd αρχείο του Visual Paradigm, που χρησιμοποιήθηκε για τη δημιουργία του σχήματος, στο GitHub της εργασίας.
+\textbf{Σημειώσεις:}
+\begin{itemize}
+    \item Γνωρίζουμε ότι το σχήμα είναι πολύ μεγάλο και τα γράμματα φαίνονται μικρά, παρόλα αυτά έχουμε σιγουρευτεί ότι είναι ευδιάκριτα όταν γίνει zoom του αρχείου. Ταυτόχρονα παρέχεται και η εικόνα ξεχωριστά καθώς και το .vpd αρχείο του Visual Paradigm Online, που χρησιμοποιήθηκε για τη δημιουργία του σχήματος, στο GitHub της εργασίας.
+    \item Για τις βασικές κλάσεις του class diagram (μη UI κλάσεις) έχουμε αποκρύψει τις περισσότερες getter και setter μεθόδους, ώστε να εξοικονομήσουμε χώρο. Κάθε getter και setter μας είναι public. Επίσης για τις κλάσεις του UI έχουμε αποκρύψει μερικά από τα πεδία που είναι στιγμιότυπα της CustomTKinter βιβλιοθήκης, δηλαδή UI elements, όταν περιοριζόμασταν από χώρο, δίνοντας μεγαλύτερη βάση στα κύρια UI elements και στα frames που περιέχουν τα elements αυτά.
+\end{itemize}
 
 \section{Σύντομη περιγραφή βασικών κλάσεων}
 
@@ -83,11 +87,41 @@
 \subsection{Notification}
 Όταν ένας αγαπημένος χρήστης ενός άλλου χρήστη προσθέσει νέα καταχώρηση στην πλατφόρμα δημιουργείται μια ειδοποίηση για τον χρήστη, προσφέροντας έτσι τη δυνατότητα στους χρήστες να ενημερώνονται άμεσα για τις νέες καταχωρήσεις των "αγαπημένων" τους. Η ειδοποίηση αυτή είναι στιγμιότυπο της κλάσης "Ειδοποίηση", η οποία συνδέεται με σχέση σύνθεσης με την κλάση "Χρήστης".
 
-\section{Σημειώσεις σχετικά με τις κλάσεις του UI}
+\section{Σύντομη περιγραφή UI κλάσεων}
 
-Οι υπόλοιπες κλάσεις του class diagram που δεν αναφέρθηκαν στο κεφάλαιο 2, αποτελούν κλάσεις του UI. Σχετικά με αυτές αναφέρουμε ότι έχουμε χρησιμοποιήσει γλώσσα προγραμματισμού Python με τις βιβλιοθήκες CustomTKinter και Matplotlib, οπότε πολλοί τύποι πεδίων των κλάσεων του UI είναι στιγμιότυπα κλάσεων των βιβλιοθηκών. 
+\subsection{GUI}
+Η κλάση του GUI αποτελεί το κύριο παράθυρο του κώδικα και περιέχει πάνω το navigation bar. Επίσης περιέχεται ένα αρχικά κενό CTkFrame το container. Μέσω του navigation bar ο χρήστης μπορεί να φορτώσει στη σελίδα, το οποίο γίνεται μέσω της δημιουργίας στιγμιότυπου των υπολοίπων UI κλάσεων(εκτός του ReviewPage), οι οποίες UI κλάσεις κληρονομούν από το CTkFrame, και τη μετέπειτα αντικατάσταση του container με το CTkFrame που δημιουργείται, άρα φορτώνοντας τη σελίδα που θέλει κάθε φορά ο χρήστης κάτω από το navigation bar.
 
-Οι κλάσεις του UI δεν θα αναλυθούν παραπάνω, εφόσον θεωρούμε ότι η λειτουργία τους είναι κατανοητή με βάση το διάγραμμα και την ανάλυση των άλλων κλάσεων στο κεφάλαιο 2.
+\subsection{SearchPage}
+Αποτελεί την οθόνη αναζήτησης του χρήστη. Από εδώ μπορεί ο χρήστης να κάνει αναζήτηση για προσφορές βιβλίων, να προβάλλει ποιοι χρήστες προσφέρουν το βιβλίο αυτό, και να δημιουργήσει μια νέα συναλλαγή με αυτούς.
+
+Επίσης μπορεί να αναζητήσει για άλλους χρήστες και να προβάλει το προφίλ και τα reviews τους, έχοντας και τη δυνατότητα για προσθήκη του χρήστη στη λίστα αγαπημένων τους.
+
+Τέλος μπορεί να αναζητήσει και για αιτήσεις βιβλίων που είναι διαθέσιμες στη πλατφόρμα, να προβάλλει τους χρήστες που κάνουν αίτηση για το συγκεκριμένο βιβλίο και να κάνει συναλλαγή με αυτούς.
+
+\subsection{DashboardPage}
+Το DashboardPage αποτελεί την οθόνη όπου ο χρήστης βλέπει τις τρέχουσες συναλλαγές του. Από εδώ μπορεί να κάνει "Accept" ή "Deny" μια συναλλαγή, να κάνει δήλωση "Mark Possession" και "Mark Returned", αλλάζοντας κάθε φορά αντίστοιχα το status της συναλλαγής.
+
+\subsection{MyBookOffersPage}
+Η οθόνη όπου μπορεί ο χρήστης να προβάλλει τις προσφορές βιβλίων του, να προσθέσει και άλλες και να επεξεργαστεί ή να διαγράψει τις ήδη υπάρχουσες.
+
+\subsection{MyBookRequestsPage}
+Η οθόνη όπου μπορεί ο χρήστης να προβάλλει τις αιτήσεις βιβλίων του, να προσθέσει και άλλες και να επεξεργαστεί ή να διαγράψει τις ήδη υπάρχουσες.
+
+\subsection{MyFavoritesPage}
+Η οθόνη όπου μπορεί ο χρήστης να προβάλλει τη λίστα αγαπημένων του και να διαγράψει τυχόν χρήστες που δεν θέλει πλέον στη λίστα.
+
+\subsection{NotificationsPage}
+Η οθόνη όπου μπορεί ο χρήστης να προβάλλει τις ειδοποιήσεις που δημιουργούνται όταν οι αγαπημένοι του χρήστες προσθέτουν μια προσφορά βιβλίου ή μια αίτηση βιβλίου.
+
+\subsection{TransactionHistoryPage}
+H οθόνη όπου ο χρήστης προβάλλει το ιστορικό συναλλαγών του, προβάλλει στατιστικά για τα βιβλία και τις συναλλαγές όπου ήταν ο ίδιος ο ιδιοκτήτης και του δίνεται η δυνατότητα μετάβασης στην σελίδα που κάνει τις αξιολογήσεις των άλλων χρηστών.
+
+\subsection{ReviewPage}
+Αποτελεί μια ξεχωριστή σελίδα που δημιουργείται όταν το επιλέξει ο χρήστης στο TransactionHistoryPage και επιτρέπει στον χρήστη να προσθέσει αξιολόγηση χρήστες με τους οποίους έκανε συναλλαγή.
+
+\subsection{MyProfilePage}
+Αποτελεί την οθόνη όπου ο χρήστης προβάλλει τα στοιχεία του και τα επεξεργάζεται.
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
 \begin{enumerate}
@@ -95,5 +129,36 @@
 	\item \textbf{Περικλής Κοροντζής:} Author
     \item \textbf{Χρήστος Μπεστητζάνος:} Contributor
 \end{enumerate}
+
+\section{Αλλαγές από έκδοση σε έκδοση}
+
+\subsection{Από έκδοση Domain-model v0.1 σε έκδοση Domain-model v0.2}
+\begin{itemize}
+    \item Σχεδίαση του Domain-model από την αρχή, μέσω του Visual Paradigm.
+    \item Προσθήκη σωστών συσχετίσεων μεταξύ κλάσεων.
+    \item Μετάφραση ονομάτων κλάσεων στα ελληνικά.
+    \item Προσθήκη της κλάσης "Καταχώρηση" και ορισμός των "Προσφορά βιβλίου" και "Αίτηση βιβλίου" ως κλάσεις παιδιά της.
+    \item Προσθήκη κλάσεων "Πόλη", "Ειδοποίηση", "Αγαπημένος χρήστης".
+\end{itemize}
+
+\subsection{Από έκδοση Domain-model v0.2 σε έκδοση Domain-model v0.3}
+\begin{itemize}
+    \item Προσθήκη επιπλέον συσχετίσεων μεταξύ κλάσεων.
+    \item Προσθήκη στατικού μοντέλου attributes που προέκυψαν από τα Robustness Diagrams.
+    \item Προσθήκη μεθόδων στις κλάσεις από το Sequence Diagram.
+    \item Προσθήκη multiplicities of associations.
+\end{itemize}
+
+\subsection{Από έκδοση Domain-model v0.3 σε έκδοση Class-diagram v0.1}
+\begin{itemize}
+    \item Προσαρμογή ώστε τα ονόματα των κλάσεων, τα πεδία και οι μέθοδοι να αντιστοιχούν στον κώδικα Project-code v0.2
+    \item Προσθήκη όλων των UI κλάσεων.
+\end{itemize}
+
+\subsection{Από έκδοση Class-diagram v0.3 σε έκδοση Class-diagram v1.0}
+\begin{itemize}
+    \item Προσαρμογή ώστε να υπάρχει αντιστοίχηση με το Project-code v1.0
+    \item Προσθήκη βασικού σχολιασμού και για όλες τις UI κλάσεις.
+\end{itemize}
 
 \end{document}
