--- a/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
+++ b/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
@@ -65,13 +65,22 @@
 
 %Insert Body Here
 \section{Σύνδεσμος GitHub με Κώδικα}
-Ο κώδικας που γράφτηκε για την εργασία βρίσκεται στο repository στον παρακάτω σύνδεσμο, που οδηγεί απευθείας στο κώδικα στο τελευταίο commit πριν την υποβολή του Project-code-v0.2
+Ο κώδικας που γράφτηκε για την εργασία βρίσκεται στο repository στον παρακάτω σύνδεσμο που οδηγεί απευθείας στο κώδικα της εργασίας:
 
-\textcolor{blue}{\href{https://github.com/GregKapadoukas/University-Software-Engineering-Project/tree/5c1e1a625bc78ddd7f1401bb845f9ce31d33f8f0/Code}{https://github.com/GregKapadoukas/University-Software-Engineering\\-Project/tree/e8eab90daeb6e34b430143f79b35973e3350d5f0/Code}}
+\textcolor{blue}{\href{https://github.com/GregKapadoukas/University-Software-Engineering-Project/tree/master/Code}{https://github.com/GregKapadoukas/University-Software-Engineering-\\Project/tree/master/Code}}
 
-\section{Τι Περιλαμβάνει η Έκδοση v0.2}
+\section{Τι Περιλαμβάνει η Έκδοση v1.0}
 
-Η έκδοση v0.2 του Project-code περιλαμβάνει όλο το κώδικα, με εξαίρεση τη λειτουργικότητα των οθονών για τη συγγραφή κριτικής και το διαχείριση των αιτήσεων του χρήστη.
+Η έκδοση v1.0 του Project-code περιλαμβάνει όλο το κώδικα με όλη τη λειτουργικότητα από όλα τα use cases που σχεδιάσαμε. Η μόνη λειτουργικότητα που λείπει είναι η προβολή της εικόνας χρήστη και η εναλλακτική ροή της αλλαγής εικόνας χρήστη. Screenshots του κώδικα περιέχονται επίσης στο τεχνικό κείμενο Project-description-v1.0.pdf, όπως μας ζητείται.
+
+\section{Σημειώσεις Σχετικές με τον Κώδικα}
+\label{Notes}
+
+\begin{itemize}
+    \item Αρχικά αναφέρεται ότι δεν γίνεται χρήση βάσης δεδομένων για την αποθήκευση των δεδομένων του προγράμματος. Τα δεδομένα έχουν τη μορφή στιγμιοτύπων των κλάσεων που έχουμε δημιουργήσει και γίνεται προσπέλαση αυτών μέσω της ανάγνωσης των τιμών των πεδίων των στιγμιοτύπων (μέσω αντίστοιχων getter methods). Οπότε τα νέα δεδομένα (στιγμιότυπα) που προστίθενται ή ανανεώνονται στην εφαρμογή κατά την εκτέλεση δεν είναι persistent από εκτέλεση σε εκτέλεση.
+    \item Πολλές φορές κατά τη χρήση του προγράμματος, όταν γίνεται προσθήκη, αλλαγή ή διαγραφή σε δεδομένα είναι αναγκαία η ανανέωση του frame της σελίδας ώστε να νέα δεδομένα να εμφανιστούν. Αυτό γίνεται μέσω κλικ της οθόνης που βρίσκεται ήδη ο χρήστης ξανά στο navigation bar.
+    \item Τέλος, επειδή δεν έχει υλοποιηθεί σύστημα log in και log out, εφόσον δεν αναλύσαμε κάτι τέτοιο στα use cases, θεωρούμε ότι γίνεται αυτόματο log in ενός χρήστη που ονομάζουμε currentUser. Στη περίπτωση όμως της ανανέωσης της κατάστασης μιας συναλλαγής στο Dashboard ('Accept' ή 'Deny' transaction, 'Mark Delivered', 'Mark Returned') που χρειάζεται αλληλεπίδραση μεταξύ δύο χρηστών, θεωρούμε πως ο χρήστης με τον οποίο αλληλεπιδρά ο currentUser κάνει αυτόματα 'Accept' τη συναλλαγή όταν τη δημιουργεί ο currentUser, αυτόματα 'Mark Delivered' αφού το κάνει και ο currentUser και αυτόματα 'Mark Returned' αφού το κάνει και ο curreentUser. Με αυτό το τρόπο αποφεύγουμε το log out και log in ως τον άλλο χρήστη, παρόλα αυτά η λειτουργικότητα του κώδικα έχει συγγραφτεί ώστε να υπάρχει η λειτουργία από πίσω για όλες τις πιθανές ενέργειες που θα επιθυμούσε να κάνει ο άλλος χρήστης.
+\end{itemize}
 
 \section{Οδηγίες Εκτέλεσης του Κώδικα και Εγκατάσταση Dependencies}
 Για την διεκπεραίωση αυτής της εργασίας έχουμε επιλέξει να χρησιμοποιήσουμε γλώσσα προγραμματισμού Python μαζί τη βιβλιοθήκη CustomTKinter για το GUI και Matplotlib για το UI.
@@ -131,6 +140,12 @@ python main.py\end{lstlisting}
 \begin{itemize}
     \item Σχολιασμός του τι έχει γίνει στο κώδικα για την έκδοση v0.2, ανανέωση του συνδέσμου.
     \item Ανανέωση των οδηγιών ώστε να εγκατασταθούν και οι νέες βιβλιοθήκες που αποφασίσαμε να χρησιμοποιήσουμε.
+\end{itemize}
+
+\subsection{Από έκδοση v0.2 σε έκδοση v1.0}
+\begin{itemize}
+    \item Σχολιασμός του τι έχει γίνει στο κώδικα για την έκδοση v1.0, ανανέωση του συνδέσμου ώστε να δείχνει στο κώδικα του τελευταίου commit του master branch στο GitHub της εργασίας.
+    \item Προσθήκη του κεφαλαίου \ref{Notes}: "Σημειώσεις Σχετικές με τον Κώδικα".
 \end{itemize}
 
 
