Added new use case diagram and final Gantt chart to reports

--- a/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
+++ b/Reports/Team-Plan/v1.0/Files/Team-plan-v1.0.tex
@@ -145,11 +145,35 @@
 \end{itemize}
 
 \subsection{Τελικό Gantt Chart και Ανάθεση Έργου}
+Παρακάτω δίνουμε τον τελικό πίνακα των tasks που προέκυψε στη τελική και που ακολουθήσαμε σαν ομάδα:
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Final Team-Plan Table.png}}
+	\caption{Τελικός Πίνακας Χρονοπρογραμματισμού Project}
+	\label{Τελικός Πίνακας Χρονοπρογραμματισμού Project}
+\end{figure}
+
+Σημειώνουμε εδώ πως οι ακριβείς ημερομηνίες αρχής και τέλους για κάθε task δεν αντιστοιχούν αναγκαστικά στις ακριβείς ημερομηνίες που ασχοληθήκαμε, παρά ορίζονται κυρίως με σκοπό να καταλήξουμε στη διάρκεια χρόνου που ασχοληθήκαμε με κάθε task, ώστε να οδηγηθούμε σε κατάλληλο κρίσιμο μονοπάτι έπειτα στο Gantt chart. Εξαίρεση αποτελούν οι ημερομηνίες για τα ορόσημα, που είναι οι ακριβείς ημερομηνίες που υποβάλλαμε τελικά, καθώς και σημειώνεται ότι οι εξαρτήσεις μεταξύ των tasks τηρήθηκαν επίσης.
+
+Παρατηρούμε ότι έγιναν αλλαγές σε ορισμένα tasks, όπως η αφαίρεση της δημιουργίας βάσης δεδομένων, που παρατηρήσαμε ότι δεν μας χρειάστηκε τελικά, η αφαίρεση της συγγραφής test cases, επειδή αποφασίσαμε ότι δεν προλαβαίνουμε να τα υλοποιήσουμε σαν ομάδα των τεσσάρων καθώς και στην αναδόμηση των tasks σχετικά με τη συγγραφή του κώδικα, επειδή δεν προλάβαμε να ασχοληθούμε τόσο νωρίς όσο θέλαμε αρχικά. 
+
+Παρακάτω δίνεται το τελικό Gantt chart χρονοπρογραμματισμού της εργασίας έτσι όπως προέκυψε, μαζί με την τελική ανάθεση έργου πάνω:
+
+\begin{figure}[H]
+	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Final Team-Plan Gantt.png}}
+	\caption{Τελικό Gantt Chart Χρονοπρογραμματισμού Project}
+	\label{Τελικό Gantt Chart Χρονοπρογραμματισμού Project}
+\end{figure}
+
+Παρατηρούμε λοιπόν ότι έγιναν και αλλαγές στον τελικό χρονοπρογραμματισμό, όταν πλέον στη πορεία της άσκησης εντοπίστηκε καλύτερα ποια άτομα ήταν τα καταλληλότερα να ασχοληθούν με κάθε task. 
+
+Εννοείται στο Gantt chart ότι όταν κάποιο άτομο ασχολείται με δύο ή παραπάνω tasks παράλληλα και το ένα από τα δύο λήξει, το ποσοστό που είχε ανατεθεί στο task που έληξε ανατίθεται στο άλλο task ή στα άλλα tasks που ασχολείται εκείνη τη περίοδο με ομοιόμορφο τρόπο.
+
+Τέλος σημειώνω πως δεν δίνουμε τελικό Pert chart, επειδή αυτό δεν ζητείται στο εγχειρίδιο της άσκησης καθώς και δεν έχει νόημα η προσέγγιση κανονικής, αισιόδοξης και απαισιόδοξης εκτίμησης (και προφανώς και υπολογισμός διακύμανσης και αναμενόμενης διάρκειας) όταν πλέον το έργο έχει γίνει και γνωρίζουμε τον χρόνο που πήρε το κάθε task.
 
 \subsection{Συμπεράσματα από τον Τρόπο Εργασίας ως Ομάδα}
 
 \subsubsection{Αλλαγές που προέκυψαν στο τρόπο συνεργασίας}
-
 Σχετικά με τον τρόπο συνεργασίας ως ομάδα, παρατηρήσαμε αρχικά ότι ορισμένες από τις ιδέες και προδιαγραφές του SCRUM δεν μας φάνηκαν τόσο ωφέλιμες για ομάδα μόνο τεσσάρων ατόμων, οπότε δεν εφαρμόστηκαν με την αυστηρή έννοια των προδιαγραφών που ορίσαμε.
 
 Έτσι για παράδειγμα, δεν έγινε σχεδιασμός και χρήση product backlog, με την έννοια που γίνεται κανονικά σε ομάδες που χρησιμοποιούν SCRUM, παρά είχαμε τον ίδιο τον Scrum Master υπεύθυνο για την συντήρηση μιας λίστας από tasks που έπρεπε να γίνουν για κάθε παραδοτέο, και στις ομαδικές συναντήσεις γινόταν ομαδική συμφωνία καταχώρησης των tasks σε διαφορετικά μέλη της ομάδας και συμφωνία καταληκτικών ημερομηνιών όπου έπρεπε ο καθένας να έχει τελειώσει τη δουλειά που ανέλαβε και διαμοιραζόταν εκ νέου εργασία.
@@ -161,7 +185,6 @@
 Τέλος αναφέρουμε ότι ο ρόλος του Scrum Master δεν κατάντησε τελικά να τον εναλλάσσουμε μεταξύ των μελών των ομάδων ανά παραδοτέο, αλλά τον είχε ο Γρηγόρης Καπαδούκας για όλη τη διάρκεια της εργασίας. Με αυτό το τρόπο κρατήσαμε μια σταθερότητα στις ευθύνες που είχε κάθε άτομο της ομάδας για τη διάρκεια της εργασίας και μπορέσαμε με το καιρό να βελτιώνουμε την απόδοση των μελών, χωρίς την ανάγκη για προσαρμογή σε νέους ρόλους σε κάθε sprint.
 
 \subsubsection{Συμπεράσματα}
-
 Σημειώνουμε πως με τις αλλαγές στον τρόπο συνεργασίας που κάναμε, νιώθουμε ότι η μέθοδος που χρησιμοποιήσαμε μας βοήθησε για τον συντονισμό των μελών, εφόσον γνωρίσαμε όλοι σε κάθε χρονική στιγμή τι έπρεπε να γίνει από τον καθένα μας και σε τι χρονικό διάστημα, χωρίς να γίνεται διπλότυπη εργασία και χωρίς να δημιουργούνται παρεξηγήσεις για το ποιο άτομο είναι υπεύθυνο για κάποιο task.
 
 Αν μπορούσαμε να γυρίσουμε το χρόνο πίσω, θα επιμέναμε παραπάνω στα αρχικά χρονοδιαγράμματά μας, συγκεκριμένα στο ξεκίνημα συγγραφής του κώδικα νωρίτερα, όπως σκοπεύαμε αρχικά αλλά δεν καταφέραμε να κάνουμε. Αυτό το αναφέρουμε επειδή η εμπειρία που αποκτήσαμε κατά τη συγγραφή του κώδικα μας βοήθησε πολύ να εντοπίσουμε και να διορθώσουμε λάθη στη σχεδίαση που είχαμε κάνει, τα οποία αν είχαμε νωρίτερα την εμπειρία αυτή δεν θα τα είχαμε κάνει εξαρχής.
