--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -43,7 +43,9 @@
 
 Το Use Case Diagram που φτιάξαμε αποτελεί το Σχήμα \ref{Use Case Diagram}. Για την καλύτερη και πιο λεπτομερή σχεδίαση, πολλά use cases τα οποία αποτελούν ένα use case παρακάτω στο κεφάλαιο \ref{Ροές των Use Cases}, εδώ έχουν αποτελέσει περισσότερα από ένα με σκοπό την καλύτερη ανάλυση της αλληλεπίδρασης μεταξύ των use cases.
 
-Έτσι για παράδειγμα, το use case της "Αναζήτησης βιβλίων / χρήστη, αιτήσεων" στο κεφάλαιο \ref{Ροές των Use Cases} εδώ χωρίζεται σε "Αναζήτηση", "Αναζήτηση βιβλίου", "Αναζήτηση χρήστη" και "Αναζήτηση αίτησης", με σχέση γενίκευσης των τριών τελευταίων από το πρώτο. Επίσης τα use cases με σχέση extends μπορούν στο κεφάλαιο \ref{Ροές των Use Cases} να αναπαρασταθούν σε ένα use case, με ένδειξη της επιπλέον λειτουργικότητας σε εναλλακτική ροή. Με αυτόν τον τρόπο προσπαθούμε να αποφύγουνε να αναλύσουμε τετριμμένα use cases.
+Έτσι για παράδειγμα, το use case της "Αναζήτησης βιβλίων / χρήστη / αιτήσεων" στο κεφάλαιο \ref{Ροές των Use Cases} εδώ χωρίζεται σε "Αναζήτηση", "Αναζήτηση βιβλίου", "Αναζήτηση χρήστη" και "Αναζήτηση αίτησης", με σχέση γενίκευσης των τριών τελευταίων από το πρώτο. Επίσης τα use cases "Επεξεργασία Λίστας Αγαπημένων" και "Προβολή Ειδοποιήσεων" αποτελούν πάλι ένα use case στο κεφάλαιο \ref{Ροές των Use Cases}. Με αυτόν τον τρόπο προσπαθούμε να δημιουργήσουμε ένα αναλυτικό και κατανοητό use case diagram, αλλά και να αποφύγουνε να αναλύσουμε τετριμμένα use cases έπειτα.
+
+Σημειώνω επίσης ότι όλοι οι χρήστες του συστήματος είναι ισάξιοι, και μπορούν να αποτελέσουν και Ενοικιαστές και Ιδιοκτήτες σε διαφορετικές συναλλαγές. Στο διάγραμμα έχουμε χρησιμοποιήσει τη σχέση γενίκευσης του Ενοικιαστή και του Ιδιοκτήτη με τον Χρήστη, ώστε να δηλώσουμε ότι τα use cases "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση" απαιτούν την συμμετοχή δύο χρηστών με διαφορετικούς ρόλους κάθε φορά. Αυτό δεν σημαίνει ότι ο Ενοικιαστής μιας συναλλαγής δεν γίνεται να είναι ο Ιδιοκτήτης της επόμενης που θα συμμετάσχει.
 
 \begin{figure}[H]
 	\makebox[\textwidth]{\includegraphics[width=\textwidth]{Use-case Diagram.png}}
@@ -560,8 +562,14 @@
 \subsection{Από έκδοση v0.2 σε έκδοση v0.3}
 \begin{itemize}
     \item Αλλαγή στο Use Case "Αναζήτηση βιβλίων / χρήστη / αιτήσεων"
-    \item Διαγραφή των Use Cases "Αναζήτηση βιβλίων / χρήστη / αιτήσεων" και "Ενοικίαση βιβλίου από άλλο χρήστη" και αντικατάστασή τους με τα "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
+    \item Διαγραφή των Use Cases "Ενοικίαση βιβλίου από άλλο χρήστη" και "Ενοικίαση βιβλίου σε άλλο χρήστη (μεριά ιδιοκτήτη)" και αντικατάστασή τους με τα "Αποδοχή Προσφοράς Βιβλίου και Ενοικίαση" και "Αποδοχή Αίτησης Βιβλίου και Ενοικίαση".
     \item Προσθήκη της σημείωσης στο Use Case "Επεξεργασία χρηματικού υπολοίπου χρήστη".
+\end{itemize}
+
+\subsection{Από έκδοση v0.3 σε έκδοση v1.0}
+\begin{itemize}
+    \item Διόρθωση του use case Diagram
+    \item Διορθώσεις στα use cases των κεφαλαίων 2.1, 2.2, 2.3
 \end{itemize}
 
 \end{document}
