--- a/Reports/Project-Plan/v1.0/Files/Project-plan-v1.0.tex
+++ b/Reports/Project-Plan/v1.0/Files/Project-plan-v1.0.tex
@@ -184,4 +184,9 @@ $Συνολο = 352240 + 1200 + 6000 + 1500 + 1500 + 9600 + 1600 + 640 + 800 \ap
     \item Διόρθωση στον υπολογισμό κόστους (κυρίως των μισθών).
 \end{itemize}
 
+\subsection{Από έκδοση v0.2 σε έκδοση v1.0}
+\begin{itemize}
+    \item Οι εκδόσεις είναι πανομοιότυπες, δεν έχει γίνει καμία αλλαγή.
+\end{itemize}
+
 \end{document}
