--- a/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
+++ b/Reports/Project-Code/v1.0/Files/Project-code-v1.0.tex
@@ -80,6 +80,7 @@
     \item Αρχικά αναφέρεται ότι δεν γίνεται χρήση βάσης δεδομένων για την αποθήκευση των δεδομένων του προγράμματος. Τα δεδομένα έχουν τη μορφή στιγμιοτύπων των κλάσεων που έχουμε δημιουργήσει και γίνεται προσπέλαση αυτών μέσω της ανάγνωσης των τιμών των πεδίων των στιγμιοτύπων (μέσω αντίστοιχων getter methods). Οπότε τα νέα δεδομένα (στιγμιότυπα) που προστίθενται ή ανανεώνονται στην εφαρμογή κατά την εκτέλεση δεν είναι persistent από εκτέλεση σε εκτέλεση.
     \item Πολλές φορές κατά τη χρήση του προγράμματος, όταν γίνεται προσθήκη, αλλαγή ή διαγραφή σε δεδομένα είναι αναγκαία η ανανέωση του frame της σελίδας ώστε να νέα δεδομένα να εμφανιστούν. Αυτό γίνεται μέσω κλικ της οθόνης που βρίσκεται ήδη ο χρήστης ξανά στο navigation bar.
     \item Τέλος, επειδή δεν έχει υλοποιηθεί σύστημα log in και log out, εφόσον δεν αναλύσαμε κάτι τέτοιο στα use cases, θεωρούμε ότι γίνεται αυτόματο log in ενός χρήστη που ονομάζουμε currentUser. Στη περίπτωση όμως της ανανέωσης της κατάστασης μιας συναλλαγής στο Dashboard ('Accept' ή 'Deny' transaction, 'Mark Delivered', 'Mark Returned') που χρειάζεται αλληλεπίδραση μεταξύ δύο χρηστών, θεωρούμε πως ο χρήστης με τον οποίο αλληλεπιδρά ο currentUser κάνει αυτόματα 'Accept' τη συναλλαγή όταν τη δημιουργεί ο currentUser, αυτόματα 'Mark Delivered' αφού το κάνει και ο currentUser και αυτόματα 'Mark Returned' αφού το κάνει και ο curreentUser. Με αυτό το τρόπο αποφεύγουμε το log out και log in ως τον άλλο χρήστη, παρόλα αυτά η λειτουργικότητα του κώδικα έχει συγγραφτεί ώστε να υπάρχει η λειτουργία από πίσω για όλες τις πιθανές ενέργειες που θα επιθυμούσε να κάνει ο άλλος χρήστης.
+    \item Σχετικά με την σελίδα αναζήτησης, σημειώνουμε πως για αναζήτηση βιβλίου και αίτησης γίνεται substring matching στους τίτλους και τους συγγραφείς των διαθέσιμων βιβλίων. Άρα για κενή αναζήτηση, το string '' (κενό) είναι substring όλων των string, οπότε θα εμφανιστούν όλα τα διαθέσιμα βιβλία και αιτήσεις. Αντιθέτως για αναζήτηση χρήστη, πρέπει να εισαχθεί το πλήρη username του άλλου χρήστη για να εμφανιστεί η σελίδα του (string matching) άρα προτείνεται να δοκιμαστούν τα search terms 'Xristos' και 'George' για παράδειγμα, που αναπαριστούν χρήστες που έχουμε προσθέσει ως στιγμιότυπα 'User' στον κώδικα.
 \end{itemize}
 
 \section{Οδηγίες Εκτέλεσης του Κώδικα και Εγκατάσταση Dependencies}
