--- a/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
+++ b/Reports/Use-Cases/v1.0/Files/Use-cases-v1.0.tex
@@ -226,11 +226,11 @@
 \begin{enumerate}
     \item Ο χρήστης επιλέγει να προβάλλει τη λίστα των βιβλίων που προσφέρει για ενοικίαση.
     \item Το σύστημα φορτώνει τη λίστα των βιβλίων και την εμφανίζει στον χρήστη.
-    \item Το σύστημα δίνει στον χρήστη την επιλογή να προσθέσει βιβλία προς ενοικίαση, να αφαιρέσει και να επεξεργαστεί τις πληροφορίες και τη ποσότητά αυτών που προσφέρει ήδη.
+    \item Το σύστημα δίνει στον χρήστη την επιλογή να προσθέσει βιβλία προς ενοικίαση, να αφαιρέσει και να επεξεργαστεί τις προσφορές βιβλίων που προσφέρει ήδη.
     \item Ο χρήστης επιλέγει να προσθέσει ένα νέο βιβλίο προς ενοικίαση από τους υπόλοιπους χρήστες.
     \item Ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου (τίτλος, συγγραφέας, εκδοτικός οίκος και χρονολογία τύπωσης, κατηγορίες στις οποίες ανήκει το βιβλίο, τρόπος παράδοσης, τιμή, ποσότητα ίδιων βιβλίων) και ολοκληρώνει την προσθήκη.
     \item Το σύστημα καταγράφει τα στοιχεία του βιβλίου και ολοκληρώνει την προσθήκη.
-    \item Το σύστημα ενημερώνει τον χρήστη ότι η προσθήκη έγινε με επιτυχία.
+    \item Το σύστημα φορτώνει ξανά τη σελίδα όπου φαίνεται η προσθήκη.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει εισάγει προηγουμένως βιβλία προς ενοικίαση από άλλους χρήστες:}
@@ -240,47 +240,19 @@
     \item [2.3.] Η ροή συνεχίζεται από το βήμα 3 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για βιβλίο που έχει ήδη προσθέσει:}
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης επιλέγει να επεξεργαστεί μια προσφορά βιβλίου που έχει ήδη προσθέσει:}
 \begin{enumerate}
-    \item [4.α.1.] Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για κάποιο από τα βιβλία που προσφέρει.
-    \item [4.α.2.] Ο χρήστης επιλέγει το βιβλίο των οποίων τις πληροφορίες θέλει να αλλάξει.
-
-    \item [4.α.3.] Ο χρήστης συμπληρώνει τις πληροφορίες που θέλει να ανανεώσει (τίτλος, συγγραφέας, εκδοτικός οίκος ή/και ποσότητα ίδιων βιβλίων), με εξαίρεση την ποσότητα για βιβλία που έχουν προηγούμενη ποσότητα μηδέν.
-
-    \item [4.α.4.] Το σύστημα καταγράφει τις αλλαγές.
-    \item [4.α.5.] Το σύστημα ενημερώνει τον χρήστη ότι οι αλλαγές έγιναν με επιτυχία.
+    \item [4.α.1.] Ο χρήστης επιλέγει να επεξεργαστεί μια προσφορά βιβλίου που έχει ήδη προσθέσει.
+    \item [4.α.2.] Ο χρήστης συμπληρώνει τις πληροφορίες που θέλει να ανανεώσει για τη τιμή ανά μέρα και τον τύπο συναλλαγής (δια ζώσης συναλλαγή ή ταχυδρομική).
+    \item [4.α.3.] Το σύστημα καταγράφει τις αλλαγές.
+    \item [4.α.4.] Το σύστημα φορτώνει ξανά τη σελίδα όπου φαίνονται οι αλλαγές.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιλέγει να αλλάξει την ποσότητα για ένα βιβλίο με προηγούμενη ποσότητα μηδέν:}
+\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση:}
 \begin{enumerate}
-    \item [4.β.1.] Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για κάποιο από τα βιβλία που προσφέρει.
-    \item [4.β.2.] Ο χρήστης επιλέγει το βιβλίο των οποίων τις πληροφορίες θέλει να αλλάξει.
-
-    \item [4.β.3.] Ο χρήστης συμπληρώνει την ποσότητα που θέλει να ανανεώσει για ένα βιβλίο που είχε προηγουμένως ποσότητα μηδέν. 
-
-    \item [4.β.4.] Το σύστημα καταγράφει τις αλλαγές.
-    \item [4.β.5.] Το σύστημα κάνει ξανά το βιβλίο εμφανίσιμο στην αναζήτηση και δίνει πίσω την δυνατότητα ενοικίασής του από άλλους χρήστες.
-    \item [4.β.6.] Το σύστημα ενημερώνει τον χρήστη ότι οι αλλαγές έγιναν με επιτυχία.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 4: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση:}
-\begin{enumerate}
-    \item [4.γ.1.] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
-    \item [4.γ.2.] Ο χρήστης επιλέγει το βιβλίο που θέλει να διαγράψει.
-    \item [4.γ.3.] Το σύστημα ζητάει επιβεβαίωση από τον χρήστη.
-    \item [4.γ.4.] Ο χρήστης επιβεβαιώνει τη πρόθεση του να διαγράψει την εγγραφή.
-    \item [4.γ.5.] Το σύστημα διαγράφει το βιβλίο από τη λίστα των διαθέσιμων βιβλίων του χρήστη.
-    \item [4.γ.6.] Το σύστημα ενημερώνει τον χρήστη για την επιτυχή διαγραφή.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 5: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση, αλλά δεν επιβεβαιώνει:}
-\begin{enumerate}
-    \item [4.δ.1.] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
-    \item [4.δ.2.] Ο χρήστης επιλέγει το βιβλίο που θέλει να διαγράψει.
-    \item [4.δ.3.] Το σύστημα ζητάει επιβεβαίωση από τον χρήστη.
-    \item [4.δ.4.] Ο χρήστης απορρίπτει την διαγραφή του βιβλίου.
-    \item [4.δ.5.] Το σύστημα αντιλαμβάνεται την απόρριψη της διαγραφής.
-    \item [4.δ.6.] Το σύστημα ενημερώνει τον χρήστη ότι η διαγραφή απορρίφθηκε.
+    \item [4.β.1.] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
+    \item [4.β.2.] Το σύστημα διαγράφει το βιβλίο από τη λίστα των διαθέσιμων βιβλίων του χρήστη.
+    \item [4.β.3.] Το σύστημα φορτώνει ξανά τη σελίδα όπου φαίνονται οι αλλαγές.
 \end{enumerate}
 
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
@@ -514,22 +486,16 @@
     \item Ο χρήστης επιλέγει να προβάλλει το ιστορικό των συναλλαγών του μαζί με σχετικά στατιστικά.
     \item Το σύστημα αναζητεί και βρίσκει τις ολοκληρωμένες συναλλαγές που έχει κάνει ο χρήστης.
     \item Το σύστημα δείχνει στον χρήστη την λίστα των συναλλαγών.
-    \item Επίσης επεξεργάζεται τα δεδομένα και δείχνει στον χρήστη σχετικά με τα βιβλία που προσφέρει αυτός προς ενοικίαση, μια γραφική παράσταση με το πλήθος συναλλαγών που έκανε με άλλους χρήστες ανά ηλικιακή ομάδα (13 - 16, 17 - 23, 24 - 35, 36 - 50, 50 - 60, 60+) και μια γραφική παράσταση με το πλήθος συναλλαγών ανά κατηγορία βιβλίου (fantasy, non-fiction κ.α.).
-    \item Ο χρήστης επιλέγει συγκεκριμένα φίλτρα για να απομονώσει συγκεκριμένες εγγραφές στη λίστα του ιστορικού του (με βάση ηλικία, κατηγορία βιβλίου, συγγραφέα, τίτλο βιβλίου, τιμή, ημερομηνία) και σειράς ταξινόμησης (αύξουσα ή φθίνουσα ημερομηνία).
-    \item Το σύστημα επεξεργάζεται τα φίλτρα του χρήστη και βλέπει ότι υπάρχουν ολοκληρωμένες συναλλαγές που πληρούν τα κριτήρια.
-    \item Το σύστημα εμφανίζει τις φιλτραρισμένες συναλλαγές στον χρήστη.
+    \item Το σύστημα επίσης επεξεργάζεται τα δεδομένα και δείχνει ένα bar chart σχετικά με το πλήθος των συναλλαγών του χρήστη ανά κατηγορία βιβλίου (fantasy, non-fiction κ.α.), όταν ο χρήστης είναι ο ιδιοκτήτης του βιβλίου.
+    \item Το σύστημα επίσης επεξεργάζεται τα δεδομένα και δείχνει ένα bar chart σχετικά με το πλήθος των συναλλαγών του χρήστη ανά ηλικιακή ομάδα του ενοικιαστή (<21, 21 - 31, 32 - 41, 42 - 50, >50), όταν ο χρήστης είναι ο ιδιοκτήτης του βιβλίου.
+    \item Το σύστημα ελέγχει για ποιες συναλλαγές ο χρήστης έχει κάνει αξιολόγηση του άλλου χρήστη.
+    \item Το σύστημα δίνει τη δυνατότητα στο χρήστη για αξιολόγησης των χρηστών με τους οποίους ο χρήστης έχει κάνει συναλλαγή και δεν έχει κάνει αξιολόγηση για τη συναλλαγή αυτή. Αν ο χρήστης επιλέγει αυτή τη επιλογή μεταβιβάζεται στο use case "Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής".
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Το σύστημα δεν βρίσκει εγγραφές στο ιστορικό συναλλαγών:}
 \begin{enumerate}
     \item [2.1.] Το σύστημα αντιλαμβάνεται ότι δεν έχει καταγράψει ολοκληρωμένες συναλλαγές για τον χρήστη.
-    \item [2.2.] Το σύστημα ενημερώνει τον χρήστη αντίστοιχα.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική ροή 2: Το σύστημα δεν βρίσκει εγγραφές για τα φίλτρα του χρήστη:}
-\begin{enumerate}
-    \item [6.1.] Το σύστημα αντιλαμβάνεται ότι δεν έχει καταγράψει ολοκληρωμένες συναλλαγές για τα φίλτρα που έχει επιλέξει ο χρήστης.
-    \item [6.2.] Το σύστημα ενημερώνει τον χρήστη αντίστοιχα.
+    \item [2.2.] Το σύστημα εμφανίζει κενή σελίδα ιστορικού συναλλαγών.
 \end{enumerate}
 
 \section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
